option('gst', type: 'feature', value: 'auto',
    description: 'GStreamer support')
option('gir', type: 'feature', value: 'auto',
    description: 'Enable GObject introspection')
option('manpages', type: 'feature', value: 'auto',
    description: 'Build manpages')
option('docs', type: 'feature', value: 'auto',
    description: 'Build documentation')
